--- a/views/students/index.ejs
+++ b/views/students/index.ejs
@@ -12,7 +12,7 @@
       <li>
         <%= s.name %> 
           -  
-        <%= s.graduate ? 'graduated' : 'not a graduate' %>
+        <%= s.graduate ? 'graduate' : 'not a graduate' %>
       </li>
       <% }); %>
     </ul>
